--- a/index.css
+++ b/index.css
@@ -1,3 +1,187 @@
-h1 {
-    color: red;
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap');
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Roboto', 'san-serif';
+}
+
+body {
+    background-color: #e3f2fd;
+}
+
+/* CHATBOT TOGGLER BUTTON CODING */
+.chatbot-toggler {
+    position: fixed;
+    bottom: 40px;
+    right: 40px;
+    height: 50px;
+    width: 50px;
+    background-color: #fe7cab;
+    border: none;
+    outline: none;
+    border-radius: 50%;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.chatbot-toggler span {
+    position: absolute;
+    font-size: 1.5rem;
+    color: #fff;
+}
+
+.chatbot-toggler span:first-child,
+.chatbot-toggler span:last-child {
+    opacity: 0;
+}
+
+.chatbot-toggler span:last-child {
+    opacity: 1;
+}
+
+/* CHATBOT MAIN CONTAINER CODING */
+.chatbot {
+    position: fixed;
+    bottom: 100px;
+    right: 40px;
+    width: 420px;
+    background-color: #fff;
+    overflow: hidden;
+    border-radius: 15px;
+    box-shadow: 0 0 128px 0 rgba(0, 0, 0, 0.1),
+                0 32px 64px -48px rgba(0, 0, 0, 0.6);
+    transform: scale(0.5);
+    opacity: 0;
+    pointer-events: none;
+}
+
+.show-chatbot .chatbot {
+    transform: scale(1);
+    opacity: 1;
+    pointer-events: auto;
+}
+
+.chatbot header {
+    padding: 16px;
+    background-color: #fe7cab;
+    text-align: center;
+    position: relative;
+}
+
+.chatbot header span {
+    position: absolute;
+    right: 20px;
+    top: 50%;
+    transform: translateY(-50%);
+    color: #fff;
+    font-size: 1.5rem;
+    cursor: pointer;
+    display: none;
+}
+
+.chatbot header h2 {
+    color: #fff;
+    font-size: 1.4rem;
+}
+
+.chatbot .chatbox {
+    height: 510px;
+    padding: 30px 20px 70px;
+    overflow-y: auto;
+}
+
+.chatbox .chat {
+    display: flex;
+}
+
+.chatbox .chat p {
+    color: #fff;
+    font-size: 0.9rem;
+    padding: 12px 16px;
+    border-radius: 10px 10px 0px;
+    background-color: #fe7cab;
+    max-width: 75%;
+}  
+
+.chatbox .incoming p {
+    color: #000;
+    background-color: #f2f2f2;
+    border-radius: 10px 10px 10px 0px;
+}
+
+.chatbox .incoming span {
+    height: 32px;
+    width: 32px;
+    color: #fff;
+    background-color: #fe7cab;
+    border-radius: 4px;
+    text-align: center;
+    line-height: 32px;
+    margin: 0px 10px 0px;
+    align-self: flex-end;
+}
+
+.chatbox .outgoing {
+    margin: 20px 0px;
+    justify-content: flex-end;
+}
+
+/* FOOTER INPUT FIELD CODING */
+.chatbot .chat-input {
+    position: absolute;
+    bottom: 0;
+    border-top: 1px solid #ccc;
+    width: 100%;
+    padding: 5px 20px;
+    background-color: #fff;
+    display: flex;
+    gap: 5px;
+}
+
+.chatbot .chat-input textarea {
+    border: none;
+    outline: none;
+    font-size: 0.9rem;
+    resize: none;
+    padding: 16px 15px 16px 0px;
+    height: 55px;
+    width: 100%;
+}
+
+.chatbot .chat-input span {
+    color: #fe7cab;
+    font-size: 1.3rem;
+    cursor: pointer;
+    align-self: flex-end;
+    height: 55px;
+    line-height: 55px;
+    visibility: hidden;
+}
+
+/* WHEN INPUT ACTION PERFORMED ON TEXTAREA THEN THE PAPER LOGO WILL BE VISIBLE */
+.chatbot .chat-input textarea:valid ~ span {
+    visibility: visible;
+}
+
+/* RESPONSIVENESS CODING FOR ALL DEVICES */
+@media(max-width: 490px) {
+    .chatbot {
+        right: 0;
+        bottom: 0;
+        width: 100%;
+        height: 100%;
+        border-radius: 0;
+    }
+
+    .chatbot .chatbox {
+        height: 90%;
+    }
+
+    .chatbot header span {
+        display: block;
+    }
 }
